--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "author": "Spencer Thayer",
     "version": "0.5",
     "description": "ezIPTV is a simple and free personal IPTV manager.",
-    "repository": "https://github.com/spencerthayer/ezIPTV.git",
-    "logo": "https://raw.githubusercontent.com/spencerthayer/ezIPTV/master/favicon.png",
+    "repository": "https://github.com/cautroi01/ezIPTV.git",
+    "logo": "https://raw.githubusercontent.com/cautroi01/ezIPTV/master/favicon.png",
     "keywords": ["IPTV", "PHP", "M3U", "EPG", "RSS"]
 }
